cmake_minimum_required(VERSION 3.10)
file(GLOB main_sources CONFIGURE_DEPENDS ./src/*.cc ./include/*.h ./main.cc)
add_executable(neon ${main_sources})
file(GLOB client_source CONFIGURE_DEPENDS ./src/*.cc ./include/*.h ./client.cc)
add_executable(client ${client_source})
target_include_directories(neon PRIVATE ./include)
target_include_directories(client PRIVATE ./include)
target_compile_definitions(neon PUBLIC DEBUG_OUTPUT)
target_link_libraries(neon PUBLIC pthread)
target_link_libraries(client PUBLIC pthread)